# seaplusplus_advance

./: Angler.cpp  Angler.h  App.cpp  App.h  Bag.cpp  Bag.h  BagChecker.cpp  BagChecker.h  CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  InputHelper.cpp  InputHelper.h  InvertebrateChecker.cpp  InvertebrateChecker.h  InvertebrateCreature.cpp  InvertebrateCreature.h  README.md  SeaChecker.cpp  SeaChecker.h  SeaCreature.cpp  SeaCreature.h  SeaPlusPlusEngine.cpp  SeaPlusPlusEngine.h  SpeciesRule.h  VertebrateChecker.cpp  VertebrateChecker.h  VertebrateCreature.cpp  VertebrateCreature.h  main.cpp
regulation/: Baitfish.json  InvertebrateCreature.json  VertebrateCreature.json  invertebrate_rules.csv  vertebrate_rules.csv
